class name fixed, spacing n rupee added in cardview , total type changed to int.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">moneyManager</string>
+    <string name="rupee">RS.</string>
+    <string name="rupeeSymbol">"\u20B9"</string>
 </resources>
